--- a/Tic-tac-toe/index.html
+++ b/Tic-tac-toe/index.html
@@ -34,8 +34,8 @@
 
         <div class="header">
            
-            <span  > <i class="fa-solid fa-x"></i></i><i class="fa-solid fa-o"></i></span> 
-            <span id="Turn" class="turn"> Turn </span>
+            <span  style="display: none"> <i class="fa-solid fa-x"></i></i><i class="fa-solid fa-o"></i></span> 
+            <span style="display: none" id="Turn" class="turn"> Turn </span>
 
             <!-- <span id="text"><i class="fa-solid fa-arrow-rotate-left"></i></span> -->
             
