--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 									<article class="post featured">
 								<header class="major">
 									
-									<h2><a href= "/Todolist-app/index.html">First Project</a></h2>
+									<h2><a href= "/todo_list_app/Todolist-app/index.html">First Project</a></h2>
 									<p>										</p>
 								</header>
-								<a href= "/Todolist-app/index.html" class="image main"><img src="/Todolist-app/design/desktop-design-light.jpg" alt="" /></a>
+								<a href= "/todo_list_app/Todolist-app/index.html" class="image main"><img src="/todo_list_app/Todolist-app/design/desktop-design-light.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="/Todolist-app/index.html" class="button large">LIVE WEBSITE</a></li>
+									<li><a href="/todo_list_app/Todolist-app/index.html" class="button large">LIVE WEBSITE</a></li>
 								</ul>
 							</article>
 
